# mdall-lite

./: .gitignore  Cargo.toml  LICENSE  NOTICES.md  README.md  build.rs
.github/workflows/: release.yml
crates/convert/: Cargo.toml  README.md
crates/convert/src/: main.rs
crates/core/: Cargo.toml
crates/core/assets/katex/: katex.embedded.css
crates/core/src/: bibliography.rs  convert.rs  crossref.rs  docx_review.rs  editor.rs  equation_renderer.rs  export.rs  export_engine.rs  export_formats.rs  export_typst.rs  figure_embed.rs  fonts.rs  import.rs  import_xml.rs  inline_math.rs  latex_macros.rs  lib.rs  purify.rs  render.rs  source_embed.rs  spell.rs  stats.rs  tests_conversion.rs  text_encoding.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: main.rs
installer/: Cargo.toml  build.rs
installer/src/: main.rs
scripts/: build-all.ps1  dist.ps1  fetch-engine.sh  make-installer.ps1  setup-engine.ps1  verify-release.ps1
src/: doc_select.rs  equation_layout.rs  i18n.rs  main.rs  modules.rs  output_format.rs  settings.rs  theme.rs  wysiwyg.rs  wysiwyg_map.rs
src/ui/: command_palette.rs  commands.rs  dialogs.rs  editor.rs  gallery.rs  hub.rs  icons.rs  mod.rs  source_highlight.rs  state.rs  svg_editor.rs  toolbar.rs
